Some adjustment for the padding setting on mobile devices

--- a/Sleepers.html
+++ b/Sleepers.html
@@ -119,8 +119,16 @@
               </p>
 
               <h2>Action</h2>
-              <img src="Projects/Sleepers/Sleepers_2.jpg" class="img_fluid" />
-              <img src="Projects/Sleepers/Sleepers_3.jpg" class="img_fluid" />
+              <img
+                src="Projects/Sleepers/Sleepers_2.jpg"
+                class="img_fluid"
+                style="width:100%; height:auto;"
+              />
+              <img
+                src="Projects/Sleepers/Sleepers_3.jpg"
+                class="img_fluid"
+                style="width:100%; height:auto;"
+              />
             </div>
           </div>
         </div>
