--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="logo_icon.png" />
+    <script src="jquery-2.1.4.js"></script>
   </head>
 
   <body>
@@ -296,6 +297,18 @@
           </div>
         </div>
       </a>
+    </div>
+    <div class="loader-wrapper">
+      <div class="cs-loader">
+        <div class="cs-loader-inner">
+          <label> ●</label>
+          <label> ●</label>
+          <label> ●</label>
+          <label> ●</label>
+          <label> ●</label>
+          <label> ●</label>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
