--- a/portfolio.html
+++ b/portfolio.html
@@ -299,16 +299,7 @@
       </a>
     </div>
     <div class="loader-wrapper">
-      <div class="cs-loader">
-        <div class="cs-loader-inner">
-          <label> ●</label>
-          <label> ●</label>
-          <label> ●</label>
-          <label> ●</label>
-          <label> ●</label>
-          <label> ●</label>
-        </div>
-      </div>
+      <div class="Loader"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
