--- a/portfolio.html
+++ b/portfolio.html
@@ -299,7 +299,7 @@
       </a>
     </div>
     <div class="loader-wrapper">
-      <div class="Loader"></div>
+      <div id="loader"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
