Fixing typo and adding MetaTag for RABBOT

--- a/RABBOT.html
+++ b/RABBOT.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>RABBOT</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Primary Meta Tags -->
+    <title>RABBOT</title>
+    <meta name="title" content="RABBOT" />
+    <meta
+      name="description"
+      content="RABBOT is a three-player AR/VR game using modified GearVR headset and iPads. It is a thesis project created by Yiyi Shao that trying to solve the isolation problem in Virtual Reality."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yiyishao.org/RABBOT.html" />
+    <meta property="og:title" content="RABBOT" />
+    <meta
+      property="og:description"
+      content="RABBOT is a three-player AR/VR game using modified GearVR headset and iPads. It is a thesis project created by Yiyi Shao that trying to solve the isolation problem in Virtual Reality."
+    />
+    <meta
+      property="og:image"
+      content="https://yiyishao.org/thumbnails/RABBOT_thumbnail.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://yiyishao.org/RABBOT.html" />
+    <meta property="twitter:title" content="RABBOT" />
+    <meta
+      property="twitter:description"
+      content="RABBOT is a three-player AR/VR game using modified GearVR headset and iPads. It is a thesis project created by Yiyi Shao that trying to solve the isolation problem in Virtual Reality."
+    />
+    <meta
+      property="twitter:image"
+      content="https://yiyishao.org/thumbnails/RABBOT_thumbnail.jpg"
+    />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -133,7 +165,7 @@
             Project management for both written document and prototype making.
           </p>
           <img src="Projects/RABBOT/roadmap.jpg" class="img_medium" />
-          <h4>3.Concenptual Framework</h4>
+          <h4>3.Conceptual Framework</h4>
           <p>
             A diagram to define possible users, solutions and relationships
             among them.
