--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       property="og:description"
       content="Yiyi Shao, Maker | Developer | Designer"
     />
-    <meta property="og:image" content="https://yiyishao.org/thumbnail.jpg" />
+    <meta
+      property="og:image"
+      content="https://yiyishao.org/thumbnails/main_thumbnail.jpg"
+    />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://yiyishao.org/" />
@@ -34,7 +37,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://yiyishao.org/thumbnail.jpg"
+      content="https://yiyishao.org/thumbnails/main_thumbnail.jpg"
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
