Adding publications section on about page

--- a/about.html
+++ b/about.html
@@ -57,6 +57,12 @@
           <b>Future Education Festival </b>2019 Exhibitor <br />
           <b>VRTO</b> 2019 Workshop facilitator
         </p>
+        <h1>Publications</h1>
+        <p class="About">
+          Shao, Yiyi, Nadine Lessio, and Alexis Morris. "IoT Avatars: Mixed
+          Reality Hybrid Objects for CoRe Ambient Intelligent Environments."
+          <i>Procedia Computer Science </i> 155 (2019): 433-440.
+        </p>
         <h1>Resume/CV</h1>
 
         <div style="padding-top:2vw;padding-bottom:2vw; float:left;">
