Updating about me

--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
           <b>GradEX </b> 2019 Exhibitor <br />
           <b>Future Education Festival </b>2019 Exhibitor <br />
           <b>VRTO</b> 2019 Workshop facilitator
+          <b>DMG October Speaker Social</b> 2019 Speaker
         </p>
         <h1>Publications</h1>
         <p class="About">
