Updating about me

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
           <b>FITC </b> 2019 Exhibitor <br />
           <b>GradEX </b> 2019 Exhibitor <br />
           <b>Future Education Festival </b>2019 Exhibitor <br />
-          <b>VRTO</b> 2019 Workshop facilitator
+          <b>VRTO</b> 2019 Workshop facilitator <br />
           <b>DMG October Speaker Social</b> 2019 Speaker
         </p>
         <h1>Publications</h1>
