--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
         </p>
         <h1>Exhibits, Talks & Workshops</h1>
         <p class="About">
-          <b>IUW</b> 2018 Speaker <br /><b>DF Openshow</b> 2018,2019
+          <b>IUW</b> 2018 Speaker <br /><b>DF Openshow</b> 2018, 2019
           Exhibitor<br />
-          <b>Dames Making Games & Social Body Lab</b> 2018,2019 Workshop
+          <b>Dames Making Games & Social Body Lab</b> 2018, 2019 Workshop
           instructor <br />
           <b>WTF – What the Futures?</b> 2019 Exhibitor<br />
           <b>LevelUp </b> 2019 Exhibitor <br />
