Updating CV and adding new project

--- a/portfolio.html
+++ b/portfolio.html
@@ -297,6 +297,16 @@
           </div>
         </div>
       </a>
+      <a href="CakeLogo.html">
+        <div class="grid-item GraphicDesign">
+          <img src="Projects/CakeLogo/businessmockup.jpg" alt="" />
+          <div class="info-wrapper">
+            <div class="name">Bluebell Confectionery Logo Design</div>
+            <div class="memo">Toronto</div>
+            <div class="date">2019</div>
+          </div>
+        </div>
+      </a>
     </div>
     <div class="loader-wrapper">
       <div id="loader">
