Adding copyright text to the cake logo project

--- a/CakeLogo.html
+++ b/CakeLogo.html
@@ -51,6 +51,9 @@
                 into a vector format. The logo can be used as stickers,
                 packages, social medias, business cards, shop sign and so on.
               </p>
+              <p>
+                All copyright of this logo belongs to Bluebell Confectionery.
+              </p>
             </div>
             <div class="col-md-6 ">
               <img
