--- a/about.html
+++ b/about.html
@@ -64,6 +64,14 @@
           Reality Hybrid Objects for CoRe Ambient Intelligent Environments."
           <i>Procedia Computer Science </i> 155 (2019): 433-440.
         </p>
+        <p class="About">
+          Kate Hartman, Chris Luginbuhl, Yiyi Shao, and Ricardo Toller Correia.
+          2020. Encasing Computation: Using Digital Fabrication Approaches to
+          Make Microcontrollers Wearable. In Proceedings of the Fourteenth
+          International Conference on Tangible, Embedded, and Embodied
+          Interaction (TEI ’20). Association for Computing Machinery, New York,
+          NY, USA, 849–861. DOI:https://doi.org/10.1145/3374920.3375004
+        </p>
         <h1>Resume/CV</h1>
 
         <div style="padding-top:2vw;padding-bottom:2vw; float:left;">
