--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <p class="About">
           <b>IUW</b> 2018 Speaker <br /><b>DF Openshow</b> 2018, 2019
           Exhibitor<br />
-          <b>Dames Making Games & Social Body Lab</b> 2018, 2019 Workshop
+          <b>Dames Making Games & Social Body Lab</b> 2018, 2019, 2020 Workshop
           instructor <br />
           <b>WTF – What the Futures?</b> 2019 Exhibitor<br />
           <b>LevelUp </b> 2019 Exhibitor <br />
