Updating universe concert

--- a/UniverseConcert.html
+++ b/UniverseConcert.html
@@ -82,10 +82,24 @@
                 class="img_fluid"
                 style="padding-top:10%; width:80%;height:auto;"
               />
+            </div>
+            <div class="col-md-8 text-center">
+              <h2>Color palette</h2>
+              <img
+                src="Projects/UniverseConcert/UniverseConcert_2.png"
+                class="img_fluid"
+                style=" width:100%;height:auto;"
+              />
+              <h2>Shaders</h2>
+              <img
+                src="Projects/UniverseConcert/UniverseConcert_3.png"
+                class="img_fluid"
+                style=" width:100%;height:auto;"
+              />
               <img
                 src="Projects/UniverseConcert/UniverseConcert.gif"
                 class="img_fluid"
-                style=" width:80%;height:auto;"
+                style=" width:30%;height:auto;"
               />
             </div>
           </div>
