--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,6 @@
   </head>
 
   <body>
-    <div id="loader"></div>
     <div id="topbar" style="width = 100%">
       <a href="index.html">
         <div id="logo">
@@ -308,21 +307,16 @@
         </div>
       </a>
     </div>
+    <div class="loader-wrapper">
+      <div id="loader">
+        <div id="box"></div>
+      </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <script src="https://npmcdn.com/imagesloaded@4/imagesloaded.pkgd.js"></script>
     <script src="js/portfolio.js"></script>
-    <script type="text/javascript">
-      function hideLoader() {
-        $("#loader").hide();
-      }
-
-      $(window).ready(hideLoader);
-
-      // Strongly recommended: Hide loader after 20 seconds, even if the page hasn't finished loading
-      setTimeout(hideLoader, 20 * 1000);
-    </script>
   </body>
 </html>
