Fixed loader again again

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,7 @@
   </head>
 
   <body>
-    <div id="loading">
-      <img id="loading-image" img src="Logo.gif" alt="Loading..." />
-    </div>
+    <div id="loading"></div>
     <div id="topbar" style="width = 100%">
       <a href="index.html">
         <div id="logo">
