--- a/portfolio.html
+++ b/portfolio.html
@@ -7,29 +7,44 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
     <link rel="icon" href="logo_icon.png" />
   </head>
 
   <body>
     <div id="loading"></div>
-    <div id="topbar" style="width = 100%">
-      <a href="index.html">
-        <div id="logo">
+    <!-- /Menu-->
+    <div id="header-nav">
+      <div class="myBrand" id="logo">
+        <a href="index.html">
           <img src="logo_White.png" style="width:100%; height:100%;" />
-        </div>
-      </a>
-      <div id="btnwrapper">
-        <nav class="btn three">
-          <ul>
-            <li><a href="index.html">Hello!</a></li>
-            <li><a href="portfolio.html" id="active">Portfolio</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-        </nav>
+        </a>
       </div>
+      <!-- Small screen menu button -->
+      <a href="#menu" class="menu-link">
+        <span class="bar1"></span>
+        <span class="bar2"></span>
+        <span class="bar3"></span>
+      </a>
+      <!-- /Small screen menu button -->
+
+      <!-- Menu Items -->
+      <nav id="menu" class="navbutton three" role="navigation">
+        <ul>
+          <li><a href="index.html">Hello!</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
+      <!-- /Menu Items -->
     </div>
+    <!-- /Menu -->
     <div class="button-group filters-button-group">
       <button class="btn-filter active" data-filter=".grid-item">All</button>
       <button class="btn-filter" data-filter=".Wearables">Wearables</button>
@@ -314,6 +329,7 @@
     <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <script src="https://npmcdn.com/imagesloaded@4/imagesloaded.pkgd.js"></script>
     <script src="js/portfolio.js"></script>
+    <script src="js/navbar.js"></script>
     <script>
       $(window).on("load", function() {
         $("#loading").hide();
