--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
       <nav id="menu" class="navbutton three" role="navigation">
         <ul>
           <li><a href="index.html">Hello!</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="portfolio.html" id="active">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
