--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- Menu Items -->
       <nav id="menu" class="navbutton three" role="navigation">
         <ul>
-          <li><a href="index.html">Hello!</a></li>
+          <li><a href="index.html" id="active">Hello!</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
@@ -101,7 +101,8 @@
       src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"
     ></script>
     <script src="js/index.js"></script>
-    <script src="js/navbar.js"></script>
+    <script src="js/logoAni.js"></script>
+
     <footer>
       <div class="footer">
         <small
