--- a/EmoLace.html
+++ b/EmoLace.html
@@ -12,13 +12,40 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="js/navbar.js"></script>
     <link rel="stylesheet" href="css/style2.css" />
-    <link rel="icon" href="logo_icon.png" />
-    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
     <link rel="icon" href="logo_icon.png" />
   </head>
 
   <body>
+    <!-- /Menu-->
+    <div id="header-nav">
+      <!-- H1 for SEO -->
+      <div class="myBrand" id="logo">
+        <a href="index.html">
+          <img src="logo_White.png" style="width:100%; height:100%;" />
+        </a>
+      </div>
+      <!-- Small screen menu button -->
+      <a href="#menu" class="menu-link">
+        <span class="bar1"></span>
+        <span class="bar2"></span>
+        <span class="bar3"></span>
+      </a>
+      <!-- /Small screen menu button -->
+
+      <!-- Menu Items -->
+      <nav id="menu" class="navbutton three" role="navigation">
+        <ul>
+          <li><a href="index.html">Hello!</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
+      <!-- /Menu Items -->
+    </div>
+    <!-- /Menu -->
     <div class="wrapper">
       <div id="EmoLace">
         <div class="mouse-container">
@@ -28,15 +55,6 @@
         </div>
       </div>
       <div id="content">
-        <div id="iconwrapper">
-          <div id="closeicon">
-            <div class="outer">
-              <div class="inner">
-                <a href="portfolio.html"><label>Back</label></a>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="video-wrapper">
           <iframe
             width="560"
