--- a/CourseIcon.html
+++ b/CourseIcon.html
@@ -10,6 +10,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.9/jquery.transit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/navbar.js"></script>
@@ -21,7 +22,6 @@
   <body>
     <!-- /Menu-->
     <div id="header-nav">
-      <!-- H1 for SEO -->
       <div class="myBrand" id="logo">
         <a href="index.html">
           <img src="logo_White.png" style="width:100%; height:100%;" />
