--- a/PollHUEtion.html
+++ b/PollHUEtion.html
@@ -10,6 +10,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.9/jquery.transit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/navbar.js"></script>
@@ -108,6 +109,7 @@
               <img
                 src="Projects/PollHUEtion/PollHUEtion_1.JPG"
                 class="img_fluid"
+                style="width:100%; height:auto;"
               />
               <p>THE PROBLEMS WE FACED:</p>
               <p></p>
