--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.9/jquery.transit.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/navbar.js"></script>
     <script src="js/logoAni.js"></script>
 
     <footer>
