Added a new publication

--- a/about.html
+++ b/about.html
@@ -83,6 +83,13 @@
           Interaction (TEI ’20). Association for Computing Machinery, New York,
           NY, USA, 849–861. DOI:https://doi.org/10.1145/3374920.3375004
         </p>
+        <p class="About">
+          Guan, Jie, Nadine Lessio, Yiyi Shao, and Alexis Morris. "Exploring a
+          Mixed Reality Framework for the Internet-of-Things: Toward
+          Visualization and Interaction with Hybrid Objects and Avatars." In
+          2020 IEEE Conference on Virtual Reality and 3D User Interfaces
+          Abstracts and Workshops (VRW), pp. 858-858. IEEE, 2020.
+        </p>
         <h1>Resume/CV</h1>
 
         <div style="padding-top:2vw;padding-bottom:2vw; float:left;">
