--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <div id="header-nav">
       <div class="myBrand" id="logo">
         <a href="index.html">
-          <img src="logo_White.png" style="width:100%; height:100%;" />
+          <img src="logo_White.png" style="width: 100%; height: 100%;" />
         </a>
       </div>
       <!-- Small screen menu button -->
@@ -90,9 +90,22 @@
           2020 IEEE Conference on Virtual Reality and 3D User Interfaces
           Abstracts and Workshops (VRW), pp. 858-858. IEEE, 2020.
         </p>
+        <p class="About">
+          Hartman, Kate, Chris Luginbuhl, Yiyi Shao, and Ricardo Toller Correia.
+          "Encasing Computation: Using Digital Fabrication Approaches to Make
+          Microcontrollers Wearable." In Proceedings of the Fourteenth
+          International Conference on Tangible, Embedded, and Embodied
+          Interaction, pp. 849-861. 2020.
+        </p>
+        <p class="About">
+          Morris, Alexis, Jie Guan, Nadine Lessio, and Yiyi Shao. "Toward Mixed
+          Reality Hybrid Objects with IoT Avatar Agents." In 2020 IEEE
+          International Conference on Systems, Man, and Cybernetics (SMC), pp.
+          766-773. IEEE, 2020.
+        </p>
         <h1>Resume/CV</h1>
 
-        <div style="padding-top:2vw;padding-bottom:2vw; float:left;">
+        <div style="padding-top: 2vw; padding-bottom: 2vw; float: left;">
           <div class="content">
             <a href="CV.pdf" download>
               <button class="btn-download">Download</button></a
@@ -141,8 +154,9 @@
           <script type="text/javascript">
             var today = new Date();
             var year = today.getFullYear();
-            document.write(year);</script
-          >, All Rights Reserved
+            document.write(year);
+          </script>
+          , All Rights Reserved
         </small>
       </div>
     </footer>
