--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo/logo_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Yiyi Shao, Maker | Developer | Designer"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo/logo_icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Yiyi Shao</title>
-    <link rel="icon" href="logo/logo_icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo/logo_icon.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
