--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,34 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Yiyi Shao, Maker | Developer | Designer"
+      content="Yiyi Shao, Developer | Designer | Maker"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo/logo_icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Yiyi Shao</title>
     <link rel="icon" href="%PUBLIC_URL%/logo/logo_icon.png" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Yiyi Shao, Developer | Designer | Maker"
+    />
+    <meta property="og:description" content="A personal website of Yiyi Shao" />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/pics/captures/thumbnail.png"
+    />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:site_name" content="Yiyi Shao" />
+
+    <!-- Optional Twitter Card Tags (for better cross-platform sharing) -->
+    <meta name="twitter:card" content="%PUBLIC_URL%/pics/captures/card.png" />
+    <meta name="twitter:title" content="Yiyi Shao" />
+    <meta
+      name="twitter:description"
+      content="A personal website of Yiyi Shao."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/pics/captures/card.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
